config.json: updated domain

--- a/data/config.json
+++ b/data/config.json
@@ -69,5 +69,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://neat-thyme-7ef2e.netlify.app"
 }
